# cpp-stream-library

./: CMakeLists.txt  README.md  main.cpp
src/: StreamLib.h
src/main/spellchecker/: RadixTree.h  SpellChecker.h  SpellHelper.h  Trie.h
src/main/stream-dir/core/: ReadStreamBuffer.h  ReadWriteStreamBuffer.h  TextFileReader.h  TextFileReaderWriter.h  TextFileWriter.h  WriteStreamBuffer.h
src/main/stream-dir/io/file/: FileReadStreamBuffer.h  FileReadWriteStreamBuffer.h  FileWriteStreamBuffer.h
src/main/stream-dir/io/sequence/: SequenceReadStreamBuffer.h  SequenceWriteStreamBuffer.h
src/main/stream-dir/io/serializers/: ByteSerializers.h
src/main/stream-dir/streams/: ReadOnlyStream.h  ReadWriteStream.h  WriteOnlyStream.h
src/main/stream-dir/utils/: FileBuffer.cpp  FileBuffer.h
src/test/main/: ReadOnlyStreamTest.h  TestHelper.h  TmpFile.cpp  TmpFile.h  WriteOnlyStreamTest.h
src/test/resources/: read_test.txt  write_test.txt
